src/snapshots/afrotd__parser__tests__interpretation_10.2.3_6.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 2
  - 3
index: 6
text: "Team A’s Punt überquert die neutrale Zone. Während des Kicks\nhält B79 A55 einen Meter jenseits der neutralen Zone fest. B44 fängt\nden Kick an der B-25 und advanct bis zu der B-40, wo er getackelt wird."
ruling: "B79’s Foul wird durch die Postscrimmage Kick Strafdurchführung geregelt. Die 10-Meterstrafe wird vom Ende des Kicks, B-25,\ndurchgeführt. B’s Ball. 1. und 10 von der B-15."
