src/snapshots/afrotd__parser__tests__interpretation_10.2.3_7.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 2
  - 3
index: 7
text: "4. und 12 von der A-35. Unmittelbar nach dem Snap ergreift\nB77 A66 und zieht ihn zu einer Seite, damit Linebacker B43 durch das\nLoch stürmen und versuchen kann, den Kick zu blocken. B44 fängt den\nKick an der B-25 und advanct bis zu der B-40, wo er getackelt wird."
ruling: "Auf B77’s Foul ist die Postscrimmage Kick Strafdurchführung nicht anwendbar, da sich das Foul vor dem Kick ereignet. Die 10Meterstrafe wird vom Previous Spot durchgeführt. Die 10-Meterstrafe\nallein gibt Team A keinen neuen First Down, aber die Strafe für das\nHalten durch die Defense beinhaltet einen automatischen First Down.\nDaher ist es Team A’s Ball, 1. und 10 von der A-45."
