src/snapshots/afrotd__parser__tests__interpretation_10.2.5_10.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 2
  - 5
index: 10
text: Team B foult während eines erfolgreichen Try.
ruling: "Der\nTry wird nach der Strafdurchführung wiederholt oder die Strafe wird\ndurch die Regel aufgehoben. Strafen für persönliche Fouls und unsportliche Verhalten-Fouls können beim nachfolgenden Kickoff oder vom Succeeding Spot in Extraperioden durchgeführt werden."
