src/snapshots/afrotd__parser__tests__interpretation_10.2.5_11.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 2
  - 5
index: 11
text: Team B foult während eines erfolgreichen Try.
ruling: "Wiederhole den Try nach der Strafdurchführung oder die Strafe wird durch\ndie Regel aufgehoben. Strafen für Persönliche Fouls und unsportliche\nVerhalten-Fouls können beim anschließenden Kickoff oder vom Succeeding Spot in Extraperioden durchgeführt werden (Regel 8.3.3.b.1)."
