src/snapshots/afrotd__parser__tests__interpretation_10.2.5_12.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 2
  - 5
index: 12
text: "Während eines erfolgreichen Scrimmage Kick Try von der B3 ist Team B Offside. Nachdem der Ball dead ist, begeht Team B ein\npersönliches Foul."
ruling: "Wenn Team A wählt, den Try zu wiederholen, werden beide Strafen gegen Team B vor dem Snap durchgeführt\n(Regel 10.1.6). Wenn Team A die Offside-Strafe ablehnt und den Punkt\nakzeptiert, wird die Strafe für Team B’s Dead Ball Foul dann beim Kickoff oder vom Succeeding Spot in Extraperioden durchgeführt (Regel\n8.3.5)."
