src/snapshots/afrotd__parser__tests__interpretation_10.2.5_13.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 2
  - 5
index: 13
text: "Während eines erfolglosen Kicks von der B-3 beim Try bewegt sich Team A illegal beim Snap. Nachdem der Ball dead ist, foult\nTeam B."
ruling: "Team B wird offensichtlich die Strafe für Team A’s\nFoul ablehnen. Team B wird beim Kickoff oder vom Succeeding Spot in\nExtraperioden bestraft.\nFouls nach einem Try und vor dem anschließenden Kickoff:"
