src/snapshots/afrotd__parser__tests__interpretation_10.2.5_15.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 2
  - 5
index: 15
text: Beide Teams foulen bevor eines der beiden Fouls vervollständigt ist.
ruling: Die Fouls gleichen sich aus.
